--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "@actions/core": "^1.2.2",
+    "@actions/core": "^1.10.0",
     "@octokit/rest": "^16.43.1",
+    "@types/node-fetch": "^2.6.2",
     "moment-timezone": "^0.5.27",
-    "node-fetch": "^2.6.0",
-    "yaml": "^1.10.0"
+    "node-fetch": "^3.2.0",
+    "yaml": "^2.1.3"
   },
   "devDependencies": {
-    "@types/moment-timezone": "^0.5.12",
-    "@types/node-fetch": "^2.5.4",
-    "@zeit/ncc": "^0.21.0",
-    "typescript": "^3.7.5"
+    "@vercel/ncc": "^0.34.0",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "ncc": "ncc build src/index.ts -m -o dist/main && ncc build src/post.ts -m -o dist/post"
